                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET
 - 30-08-2006 changed: CUtil::Cache (used for all file copies) will now spawn a separate thread for gui rendering if file is larger than 1 meg
 - 30-08-2006 fixed: Sorting of filenames consisting of a long string of numbers was broken.
 - 30-08-2006 added: failure notifications for copy, move and delete.
 - 30-08-2006 fixed: filetransfers end early for curl sources (ftp, shout, http...), due to not trying to use it's overflow buffer before trying to get more data from host.
 - 30-08-2006 added: a bunch of more localizable strings. id's 20154-20175.
 - 30-08-2006 fixed: logging out while in a media window crashed.
 - 30-08-2006 fixed: new video_ts folder stacking wouldn't set thumbnail correctly
 - 29-08-2006 fixed: [ 1548447 ] Sorting for LastFM should be separated like in Shoutcast
 - 29-08-2006 fixed: if two profiles had same skin, different resolution bad things happened.
 - 29-08-2006 fixed: [ 1548307 ] DVD unflattens when re-entering My Programs
 - 29-08-2006 added: Clean Video Database.  Removes all http, ftp, removable media + files that no longer exist from the database.
 - 29-08-2006 changed: GetMatchingShare() looks for names before it tries paths.
 - 28-08-2006 changed: reintroduced forcing of iso/udf disc handling due to popular demand. use <detectasudf>true</detectasudf> in advancedsettings.xml.
 - 28-08-2006 fixed: Temperature units weren't displayed.
 - 27-08-2006 fixed: [ 1546191 ] Music file extensions with 2 chars
 - 27-08-2006 fixed: thumbnail generation of cbr/cbz files.
 - 27-08-2006 fixed: stored rared files in directories inside the archive would fail to open.