@@ -383,6 +383,16 @@ unsigned int CFileSMB::Read(void *lpBuf, __int64 uiBufSize)
   if (m_fd == -1) return 0;
   CSingleLock lock(smb);
 
+  /* work around stupid bug in samba */
+  /* some samba servers has a bug in it where the */
+  /* 17th bit will be ignored in a request of data */
+  /* this can lead to a very small return of data */
+  /* also worse, a request of exactly 64k will return */
+  /* as if eof, client has a workaround for windows */
+  /* thou it seems other servers are affected too */
+  if( uiBufSize >= 64*1024-2 )
+    uiBufSize = 64*1024-2;
+
   int bytesRead = smbc_read(m_fd, lpBuf, (int)uiBufSize);
 
   if ( bytesRead < 0 )
